@startuml
'https://plantuml.com/class-diagram

class TDManagerController {

}

class TDViewer {
    + displayTODOs(TDList)
    + filteredDisplayTODOs(group: TDGroup, done: boolean)
    + filteredDisplayTODOs(list: TDList, done: boolean)
}

class Exporter {
    + exportToJSON(list: TDList);
}

File Output {

}

File Input {

}

class ItemFinder {
    getButtonsItem(Button): Item
}

class Importer {
    + loadFromJSON(filepath: String): TDList
}

class TDManager {
    tdGroup: TDGroup

    + getGroups(): TDGroup or ArrayList<TDGroup>
}

class TDList {
    title: String
    list: ArrayList<Item>

    + rename(newTitle: String): void
    + addItem(item: Item): void
    + rmItem(index: int): void
    + clearItems(): void
}

class Item {
    description: String
    done: boolean
    dueDate: Date[YYYY-MM-DD]

    + checkDate(): boolean
    + checkDescription(): boolean
    + editDescription(newDesc: String)
    + editDueDate(newDate: Date(YYYY-MM-DD))
    + setDone(done: boolean)
}

javafx.Application <|-- TDViewer
TDManager <-- TDManagerController
TDList o-- Item
TDManager <-- TDList
TDViewer <-- TDManager
TDManager --> Exporter
TDManager <-- Importer
Output <-- Exporter
Input --> Importer
TDViewer ---> ItemFinder
ItemFinder ---> Item

@enduml